--- a/JavaFX/src/sample/kyas_send.fxml
+++ b/JavaFX/src/sample/kyas_send.fxml
@@ -14,14 +14,14 @@
                         <Image url="@logo.png" />
                     </image>
                 </ImageView>
-                <Label prefHeight="52.0" prefWidth="286.0" text=" KYAS-Coin" textFill="#8f0816">
+                <Label prefHeight="52.0" prefWidth="210.0" text=" KYAS-Coin" textFill="#8f0816">
                     <font>
                         <Font size="23.0" />
                     </font>
                 </Label>
                 <VBox alignment="CENTER_RIGHT" prefHeight="8.0" prefWidth="814.0">
                     <children>
-                        <Button alignment="TOP_RIGHT" mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" style="-fx-background-color: coral;" text="Logout" textFill="#8f0816" />
+                        <Button alignment="TOP_RIGHT" mnemonicParsing="false" onAction="#reset" style="-fx-background-color: coral;" text="Logout" textFill="#8f0816" />
                         <Button mnemonicParsing="false" onAction="#synchronize" style="-fx-background-color: coral;" text="Synchronize" textFill="#8f0816" />
                     </children>
                 </VBox>
@@ -49,7 +49,7 @@
                         </Label>
                         <VBox alignment="TOP_RIGHT" prefHeight="52.0" prefWidth="487.0">
                             <children>
-                                <Label text="x.xxxxxxx Cash= x.xx€">
+                                <Label fx:id="send_balance" text="x.xxxxxxx Cash= x.xx€">
                                     <font>
                                         <Font size="20.0" />
                                     </font>
@@ -65,20 +65,20 @@
                                 <Font size="20.0" />
                             </font>
                         </Label>
-                        <TextField prefHeight="36.0" prefWidth="682.0" text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />
+                        <TextField fx:id="receiver_address" prefHeight="36.0" prefWidth="682.0" />
                     </children>
                 </VBox>
                 <VBox prefHeight="76.0" prefWidth="682.0">
                     <children>
-                        <Label text="Ammount">
+                        <Label text="Amount">
                             <font>
                                 <Font size="20.0" />
                             </font>
                         </Label>
-                        <TextField text="0.000000000000000000000000" />
+                        <TextField fx:id="amount" />
                     </children>
                 </VBox>
-                <Button mnemonicParsing="false" text="Send">
+                <Button mnemonicParsing="false" onAction="#send" text="Send">
                     <font>
                         <Font size="20.0" />
                     </font>
@@ -87,7 +87,7 @@
         </VBox>
     </center>
     <left>
-        <AnchorPane prefHeight="639.0" prefWidth="231.0" style="-fx-background-color: beige;" BorderPane.alignment="CENTER">
+        <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="639.0" prefWidth="227.0" style="-fx-background-color: beige;" BorderPane.alignment="CENTER">
             <children>
                 <AnchorPane layoutY="1.0" prefHeight="638.0" prefWidth="78.0">
                     <children>
