--- a/JavaFX/src/sample/kyas_login.fxml
+++ b/JavaFX/src/sample/kyas_login.fxml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="712.0"
-            prefWidth="800.0" style="-fx-background-color: coral;" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Login_controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="712.0" prefWidth="800.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Login_controller">
     <children>
-        <ImageView fitHeight="525.0" fitWidth="381.0" layoutX="210.0" layoutY="61.0" pickOnBounds="true"
-                   preserveRatio="true">
+        <ImageView fitHeight="525.0" fitWidth="381.0" layoutX="210.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@logo.png"/>
+                <Image url="@logo.png" />
             </image>
         </ImageView>
-        <Label layoutX="241.0" layoutY="503.0" prefHeight="36.0" prefWidth="178.0" text="Username:">
+        <Label layoutX="238.0" layoutY="503.0" prefHeight="36.0" prefWidth="178.0" text="Username:" textFill="#eb602d">
             <font>
-                <Font size="21.0"/>
+                <Font size="21.0" />
             </font>
         </Label>
-        <TextField fx:id="login_screen_username" layoutX="394.0" layoutY="508.0"
-                   style="-fx-background-color: darksalmon;"/>
-        <Button layoutX="400.0" layoutY="567.0" mnemonicParsing="false" onAction="#login"
-                style="-fx-background-color: coral;" text="Login">
+        <TextField fx:id="login_screen_username" layoutX="394.0" layoutY="508.0" style="-fx-background-color: eb602d; -fx-text-fill: white;" />
+        <Button layoutX="394.0" layoutY="570.0" mnemonicParsing="false" onAction="#login" style="-fx-background-color: eb602d;" text="Login" textFill="WHITE">
             <font>
-                <Font size="25.0"/>
+                <Font size="25.0" />
             </font>
         </Button>
     </children>
