--- a/JavaFX/src/sample/kyas_send.fxml
+++ b/JavaFX/src/sample/kyas_send.fxml
@@ -55,7 +55,7 @@
                         </Label>
                         <VBox alignment="TOP_RIGHT" prefHeight="52.0" prefWidth="487.0" style="-fx-background-color: #36393f;">
                             <children>
-                                <Label fx:id="send_balance" prefHeight="48.0" prefWidth="238.0" text="x.xxxxxxx Cash= x.xx€" textFill="WHITE">
+                                <Label fx:id="send_balance" prefHeight="48.0" prefWidth="300.0" text="x.xxxxxxx Cash= x.xx€" textFill="WHITE">
                                     <font>
                                         <Font size="20.0" />
                                     </font>
@@ -71,7 +71,7 @@
                                 <Font size="20.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="receiver_address" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="36.0" prefWidth="400.0" style="-fx-background-color: #2f3136;" />
+                        <TextField fx:id="receiver_address" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="36.0" prefWidth="400.0" style="-fx-background-color: #2f3136; -fx-text-fill: white;" />
                     </children>
                 </VBox>
                 <VBox prefHeight="76.0" prefWidth="682.0" style="-fx-background-color: #36393f;">
@@ -81,7 +81,7 @@
                                 <Font size="20.0" />
                             </font>
                         </Label>
-                        <TextField fx:id="amount" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="36.0" prefWidth="400.0" style="-fx-background-color: #2f3136;" />
+                        <TextField fx:id="amount" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="36.0" prefWidth="400.0" style="-fx-background-color: #2f3136; -fx-text-fill: white;" />
                     </children>
                 </VBox>
                 <Button mnemonicParsing="false" onAction="#send" style="-fx-background-color: #2f3136;" text="Send" textFill="WHITE">
@@ -107,6 +107,11 @@
                                 <Image url="@icons8-forward-arrow-90.png" />
                             </image>
                         </ImageView>
+                  <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="14.0" layoutY="281.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@mining.png" />
+                     </image>
+                  </ImageView>
                     </children>
                 </AnchorPane>
                 <Button layoutX="75.0" layoutY="65.0" mnemonicParsing="false" style="-fx-background-color: #36393f;" text="Send" textFill="WHITE">
