--- a/JavaFX/src/sample/kyas_mining.fxml
+++ b/JavaFX/src/sample/kyas_mining.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -45,7 +44,7 @@
             <children>
                 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="623.0" style="-fx-background-color: #36393f;">
                     <children>
-                        <Label text="Settings" textFill="WHITE">
+                        <Label text="Mining" textFill="WHITE">
                             <font>
                                 <Font size="38.0" />
                             </font>
@@ -61,7 +60,7 @@
                         </Label>
                         <VBox alignment="TOP_RIGHT" prefHeight="52.0" prefWidth="487.0" style="-fx-background-color: #36393f;">
                             <children>
-                                <Label fx:id="settings_balance" prefHeight="48.0" prefWidth="300.0" text="x.xxxxxxx Cash= x.xx€" textFill="WHITE">
+                                <Label fx:id="mining_balance" prefHeight="48.0" prefWidth="300.0" text="x.xxxxxxx Cash= x.xx€" textFill="WHITE">
                                     <font>
                                         <Font size="20.0" />
                                     </font>
@@ -70,17 +69,19 @@
                         </VBox>
                     </children>
                 </HBox>
-                <VBox prefHeight="114.0" prefWidth="682.0" style="-fx-background-color: #36393f;">
+                <VBox prefHeight="35.0" prefWidth="638.0" style="-fx-background-color: #36393f;">
                     <children>
-                        <Label text="Masternodes" textFill="WHITE">
+                        <Label text="Start mining" textFill="WHITE">
                             <font>
                                 <Font size="20.0" />
                             </font>
                         </Label>
-                  <ComboBox fx:id="combobox_serverlist" prefWidth="150.0" style="-fx-background-color: #2f3136;" />
                     </children>
                 </VBox>
-                <VBox prefHeight="76.0" prefWidth="682.0" style="-fx-background-color: #36393f;" />
+                <VBox prefHeight="76.0" prefWidth="682.0" style="-fx-background-color: #36393f;">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#start_mining" prefHeight="41.0" prefWidth="106.0" style="-fx-background-color: #2f3136;" text="Mine!" textFill="WHITE" />
+               </children></VBox>
             </children>
         </VBox>
     </center>
@@ -111,12 +112,12 @@
                         <Font size="20.0" />
                     </font>
                 </Button>
-                <Button layoutX="75.0" layoutY="180.0" mnemonicParsing="false" style="-fx-background-color: #36393f;" text="Settings" textFill="WHITE">
+                <Button layoutX="75.0" layoutY="180.0" mnemonicParsing="false" onAction="#load_settings" style="-fx-background-color: #36393f;" text="Settings" textFill="WHITE">
                     <font>
                         <Font size="20.0" />
                     </font>
                 </Button>
-            <Button layoutX="75.0" layoutY="288.0" mnemonicParsing="false" onAction="#load_mining" style="-fx-background-color: #36393f;" text="Mining" textFill="WHITE">
+            <Button layoutX="75.0" layoutY="288.0" mnemonicParsing="false" style="-fx-background-color: #36393f;" text="Mine" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
