--- a/JavaFX/src/sample/kyas_mining.fxml
+++ b/JavaFX/src/sample/kyas_mining.fxml
@@ -1,16 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="690.0" prefWidth="913.0" style="-fx-background-color: #36393f;" stylesheets="@settings_scene.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Mining_controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="690.0" prefWidth="913.0" style="-fx-background-color: #36393f;" stylesheets="@settings_scene.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Mining_controller">
     <top>
         <HBox alignment="CENTER_RIGHT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="64.0" prefWidth="915.0" style="-fx-background-color: #ff5414;" BorderPane.alignment="CENTER_RIGHT">
             <children>
@@ -117,7 +112,7 @@
                         <Font size="20.0" />
                     </font>
                 </Button>
-            <Button layoutX="75.0" layoutY="288.0" mnemonicParsing="false" style="-fx-background-color: #36393f;" text="Mine" textFill="WHITE">
+            <Button layoutX="75.0" layoutY="288.0" mnemonicParsing="false" style="-fx-background-color: #36393f;" text="Mining" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
